# aegis-ai

./: .env.example  .gitignore  CLAUDE.md  README.md  pyproject.toml  requirements.txt
.claude/: README.md  settings.json
.claude/agents/: agent-graph-architect.md  infra-deployment-engineer.md  llm-prompt-specialist.md  mcp-fhir-specialist.md  medical-clinical-expert.md  rag-retrieval-specialist.md  security-privacy-reviewer.md  test-quality-engineer.md
.claude/hooks/: ruff-format-on-edit.sh
.claude/skills/clinical-review/: SKILL.md
.claude/skills/commit/: SKILL.md
.claude/skills/ingest-guidelines/: SKILL.md
.claude/skills/lint-and-format/: SKILL.md
.claude/skills/phase-status/: SKILL.md
.claude/skills/pre-commit-check/: SKILL.md
.claude/skills/run-tests/: SKILL.md
.claude/skills/security-review/: SKILL.md
.github/workflows/: ci.yml
data/guidelines/: asma.txt  avc.txt  diabetes_tipo2.txt  dpoc.txt  hipertensao_arterial.txt  insuficiencia_cardiaca.txt
data/synthea/: sample_patient_joao.json
scripts/: generate_synthea.sh  ingest_guidelines.py  run_agent.py
src/aegis/: __init__.py  config.py  fhir.py  llm.py  mcp_server.py
src/aegis/agent/: graph.py  nodes.py  runner.py  state.py
src/aegis/providers/: __init__.py  base.py  ollama.py
src/aegis/rag/: ingest.py  retriever.py  (+1 more)
tests/: conftest.py  test_agent_graph.py  test_agent_nodes.py  test_config.py  test_fhir.py  test_integration_fhir.py  test_integration_llm.py  test_integration_pipeline.py  test_integration_rag.py  test_llm.py  test_mcp_server.py  test_providers.py  test_rag.py
