[project]
name = "aegis"
version = "0.1.0"
description = "AegisNode: Agentic Clinical Copilot — an AI agent for structured medical reports from doctor's voice notes"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "ollama>=0.4",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "python-dotenv>=1.0",
    # Phase 2 — MCP
    "mcp[cli]>=1.0",
    # Phase 3 — RAG
    "qdrant-client>=1.12",
    "langchain-text-splitters>=0.3",
    "pypdf>=5.0",
    # Phase 4 — Agent
    "langgraph>=0.2",
    "langchain-ollama>=0.3",
]

[project.optional-dependencies]
finetune = [
    "unsloth",
    "datasets",
    "trl",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/aegis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py310"
line-length = 100
